--- a/style.css
+++ b/style.css
@@ -2,10 +2,21 @@
 
 .archivo-black-regular {
     font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
     font-size: 34px;
+}
+
+* {
+    text-decoration: none;
+}
+
+body {
+    margin: 0px;
+    background-image: url(restaurant.png);
+}
+
+.navbar {
+    background-color: #ffffff;
+    padding: 25px 80px;
 }
 
 #red {
@@ -16,23 +27,7 @@
     color: #8dc728;
 }
 
-body {
-    margin: 0px;
-    background-image: url(restaurant.png);
-}
-
-.container {
-    background-color: #e0e0e0;
-    padding: 40px;
-}
-
-.navbar {
-    background-color: #ffffff;
-    padding: 25px 80px;
-}
-
 .header-right a {
-    text-decoration: none;
     font-size: 16px;
     padding: 25px;
     text-align: center;
@@ -40,10 +35,32 @@ body {
     color: #333
 }
 
+
+
+
+
+
+
+
+
+.container {
+    background-color: #e0e0e0;
+    padding: 40px;
+}
+
 .main {
     padding: 45px 42px;
     display: flex;
-    
+}
+
+.left-section {
+    padding: 0px 80px 0px 0px;
+}
+
+h1 {
+    margin: 0px;
+    font-family: "Archivo Black", sans-serif;
+    font-size: 55px;
 }
 
 p {
@@ -51,22 +68,28 @@ p {
     width: 290px;
     font-size: 20px;
     font-family: "Roboto", sans-serif;
-    color: rgb(52, 52, 52);
+    color: #333;
+
 }
 
 a {
     font-size: 20px;
     font-family: "Roboto", sans-serif;
-    font-style: normal;
-    color: rgb(52, 52, 52);
-    text-decoration: none;
+    color: #333;
 }
 
 .arrow {
     line-height: 40px;
     font-weight: bold;
-    text-decoration: none;
 }
+
+
+
+
+
+
+
+
 
 .image-container{
     display: flex;
@@ -77,39 +100,7 @@ img {
     padding: 7px;
 }
 
-#shrimp {
-    object-fit: cover;
-    height: 430px;
-    position: static;
-
-}
-
-#pasta {
-    position: static;
-
-}
-
-#apple {
-    position: relative;
-
-}
-
-.text-overlay {
-    position: absolute;
-    transform: translate(175px, 406px);
-    font-size: 15px;
-    font-family: "Roboto", sans-serif;
-    font-weight: bold;
-  }
-
-  .greenbox {
-    position: absolute;
-    transform: translate(143px, 391px);
-    padding: 23px 70px;
-    background-color: #8dc728;
-  }
-
-  .whitebox {
+.whitebox {
     position: absolute;
     transform: translate(201px, 344px);
     padding: 15px;
@@ -119,12 +110,23 @@ img {
     font-weight: bold;
 }
 
-#sweet {
-    transform: translate(488px, 342px);
+.greenbox {
+    position: absolute;
+    transform: translate(143px, 391px);
+    padding: 23px 70px;
+    background-color: #8dc728;
 }
 
-#lunch {
-    transform: translate(504px, 405px);
+.text-overlay {
+    position: absolute;
+    transform: translate(175px, 406px);
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+}
+
+#sweet {
+    transform: translate(488px, 342px);
 }
 
 .lunch-greenbox {
@@ -132,6 +134,16 @@ img {
     transform: translate(421px, 389px);
     padding: 24px 75px;
     background-color: #8dc728;
+}
+
+#lunch {
+    transform: translate(504px, 405px);
+}
+
+#shrimp {
+    object-fit: cover;
+    height: 430px;
+    position: static;
 }
 
 #delicious {
@@ -149,19 +161,20 @@ img {
     transform: translate(788px, 406px);
 }
 
-.left-section {
-    padding: 0px 80px 0px 0px;
-}
 
-h1 {
-    margin: 0px;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    font-size: 55px;
-}
+
+
+
+
+
+
 
 .footer {
-    padding: 0px 20px;
+    justify-content: flex-end;
+    display: flex;
+}
+
+.footer p {
+    font-size: 15px;
+    padding: 20px
 }
