--- a/style.css
+++ b/style.css
@@ -29,10 +29,14 @@ body {
 
 .header-right a {
     font-size: 16px;
-    padding: 25px;
+    padding: 0px 30px;
     text-align: center;
     float: right;
-    color: #333
+    color: #333;
+    min-height: 37px;
+    align-content: center;
+    font-family: "Roboto", sans-serif;
+    color: #333;
 }
 
 
