--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
     margin: 0px;
     background-image: url(restaurant.png);
+    background-repeat: repeat;
 }
 
 .navbar {
@@ -58,7 +59,7 @@ body {
 }
 
 .left-section {
-    padding: 0px 80px 0px 0px;
+    padding: 0px 125px 0px 0px;
 }
 
 h1 {
@@ -77,7 +78,6 @@ p {
 }
 
 a {
-    font-size: 20px;
     font-family: "Roboto", sans-serif;
     color: #333;
 }
